# Mzansi-Bitnet-1.58

./: .env.example  .gitignore  Cargo.toml  NVIDIA.md  README.md  UBUNTU_CUDA_ERRORS.md  create_dataset.py  device.py  download.py  infer.py  requirements.txt  run.ps1  train.py
.cargo/: config.toml
MzansiLM/: package.json
MzansiLM/src/: App.css  App.tsx  ChatPage.tsx  TrainingPanel.tsx  types.ts
MzansiLM/src-tauri/: Cargo.toml  tauri.conf.json
MzansiLM/src-tauri/src/: lib.rs  main.rs
MzansiLM/src/JsonL/: JsonlEditor.tsx  JsonlEntry.tsx
data/: train.jsonl
lib/: README.md
lib/bitnet_rs/: Cargo.toml
lib/bitnet_rs/src/: bitnet.rs  dataset.rs  inference.rs  lib.rs  lora.rs  main.rs  mmap.rs  trainer.rs  utils.rs
lib/cuda_rs/: Cargo.toml  build.rs
lib/cuda_rs/benches/: matmul.rs
lib/cuda_rs/src/: cublas.rs  device.rs  error.rs  ffi.rs  lib.rs  memory.rs
lib/cuda_rs/tests/: matmul_correctness.rs
