[package]
name = "bitnet_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bitnet-cli"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = ["cuda_rs"]

[dependencies]
candle-core = "0.10"
candle-nn   = "0.10"
memmap2     = "0.9"
safetensors = "0.7"
tokenizers  = { version = "0.23", default-features = false, features = ["onig"] }
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rand        = "0.8"
cuda_rs     = { path = "../cuda_rs", optional = true }
