[package]
name = "cuda_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
half = { version = "2", features = ["bytemuck"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
half = { version = "2", features = ["bytemuck"] }

[[bench]]
name = "matmul"
harness = false
